# ziplus

./: .gitignore  LICENSE  Makefile  pyproject.toml
.github/workflows/: ci.yml  publish.yml  update-dataset.yml
data/: version.txt
scripts/: build_dataset.py
tests/: test_ziplus.py
ziplus/: __init__.py
